switch core to WIP fix

--- a/.gitmodules
+++ b/.gitmodules
@@ -3,7 +3,8 @@
 	url = https://github.com/couchbaselabs/sdk-testcases.git
 [submodule "ext/couchbase"]
 	path = ext/couchbase
-	url = https://github.com/couchbaselabs/couchbase-cxx-client.git
+    #url = https://github.com/couchbaselabs/couchbase-cxx-client.git
+	url = https://github.com/avsej/couchbase-cxx-client.git
 [submodule "deps/protostellar"]
 	path = deps/protostellar
 	url = https://github.com/couchbase/protostellar.git
