--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -4,14 +4,12 @@ permissions: {}
 on:
   push:
     branches:
-      - do_not_run
-      # - main
-      # - release*
+      - main
+      - release*
   pull_request:
     branches:
-      - do_not_run
-      # - main
-      # - release*
+      - main
+      - release*
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
