--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -3,9 +3,13 @@ permissions: {}
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
+      - release*
   pull_request:
-    branches: [ main ]
+    branches:
+      - main
+      - release*
 
 env:
   LLVM_VERSION: 20
