fix: improve regex pattern precision in CI workflow
Update the gemspec replacement pattern from `/gemspec/` to `/gemspec$/`
to ensure it only matches "gemspec" at the end of lines. This prevents
potential partial matches that could cause incorrect Gemfile
modifications during the test gem installation process.

The $ anchor makes the regex more precise and robust for the automated
gem unpacking and bundling workflow.

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -471,7 +471,7 @@ jobs:
           COUCHBASE_GEM_PATH=$(realpath couchbase-*.gem)
           UNPACKED_GEM_PATH=$(gem unpack ${COUCHBASE_GEM_PATH} | grep "Unpacked gem" | cut -d "'" -f 2)
           gem unpack --spec --target ${UNPACKED_GEM_PATH} ${COUCHBASE_GEM_PATH}
-          ruby -i.bak -pe "gsub(/gemspec/, 'gem \"couchbase\", path: \"${UNPACKED_GEM_PATH}\"')" Gemfile
+          ruby -i.bak -pe "gsub(/gemspec$/, 'gem \"couchbase\", path: \"${UNPACKED_GEM_PATH}\"')" Gemfile
           bundle install
           bundle exec ruby -r bundler/setup -r couchbase -e 'pp Couchbase::VERSION, Couchbase::BUILD_INFO'
       - name: Test
