--- a/couchbase-opentelemetry/Rakefile
+++ b/couchbase-opentelemetry/Rakefile
@@ -21,7 +21,7 @@ desc "Generate YARD documentation"
 task :doc do
   require "couchbase/opentelemetry/version"
   input_dir = File.join(__dir__, "lib")
-  output_dir = File.join(__dir__, "doc", "couchbase-ruby-client-#{Couchbase::OpenTelemetry::VERSION}")
+  output_dir = File.join(__dir__, "doc", "couchbase-ruby-client-opentelemetry-#{Couchbase::OpenTelemetry::VERSION}")
   rm_rf output_dir
   sh "bundle exec yard doc --no-progress --hide-api private --output-dir #{output_dir} #{input_dir} --main README.md"
   puts "#{File.realpath(output_dir)}/index.html"
